--- a/book1.html
+++ b/book1.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book 1</title>
-</head>
-<body background="./images/volume-resume-graphique-solitude-bureau.jpg">
-    <br><br><br>
-    <nav>
-      <ul type="circle">
-          <li><strong><a href="index.html">Home</a></strong></li>
-          <li><strong><a href="books_list.html">Top Three Favorite Books</a></strong></li>
-      </ul>
-  </nav>
-  <div style="text-align: center;">
-      <h1>The Picture Of Doran Gray</h1>
-      <img src="./images/ThePicOfDorianGray.jpg" alt="The picture of Doran Gray">
-      <br><br>
-      <p style="background-color: bisque;">
-        <strong>The Picture of Dorian Gray</strong> scandalized readers when it was first <br>
-        published in 1890. Written in Wilde’s signature style, the story has<br>
-         gone on to become an enduring tale of man’s hubris and narcissism. <br> 
-         The well-known artist Basil Hallward meets the young Dorian Gray in the stately <br>
-        London home of his aunt, Lady Brandon. Basil becomes immediately infatuated<br>
-        with Dorian, who is cultured, wealthy, and remarkably beautiful. Such beauty,<br>
-        Basil believes, is responsible for a new mode of art, and he decides to paint<br>
-        a portrait of the young man. While finishing the painting, Basil reluctantly<br>
-        introduces Dorian to his friend Lord Henry Wotton, a man known for scandal <br>
-        and exuberance. Wotton inspires Dorian to live life through the senses, to <br>
-        feel beauty in everyday experience. Dorian becomes enthralled by Wotton’s ideas,<br>
-        and more so becomes obsessed with remaining young and beautiful. He expresses <br>
-        a desire to sell his soul and have the portrait of him age, while he, the man, <br>
-        stays eternally young. A tragic story of hedonism and desire,The Picture of Dorian<br>
-         Gray is Oscar Wilde’s only published novel.
-      </p>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Book 1</title>
+	</head>
+	<body background="./images/volume-resume-graphique-solitude-bureau.jpg">
+		<br />
+		<br />
+		<br />
+		<nav>
+			<ul type="circle">
+				<li>
+					<strong><a href="index.html">Home</a></strong>
+				</li>
+				<li>
+					<strong><a href="books_list.html">Top Three Favorite Books</a></strong>
+				</li>
+			</ul>
+		</nav>
+		<div align="center">
+			<h1>The Picture Of Doran Gray</h1>
+			<img src="./images/ThePicOfDorianGray.jpg" alt="The picture of Doran Gray" />
+			<br />
+			<br />
+			<p>
+				<strong>The Picture of Dorian Gray</strong> scandalized readers when it was first <br />
+				published in 1890. Written in Wilde’s signature style, the story has<br />
+				gone on to become an enduring tale of man’s hubris and narcissism. <br />
+				The well-known artist Basil Hallward meets the young Dorian Gray in the stately <br />
+				London home of his aunt, Lady Brandon. Basil becomes immediately infatuated<br />
+				with Dorian, who is cultured, wealthy, and remarkably beautiful. Such beauty,<br />
+				Basil believes, is responsible for a new mode of art, and he decides to paint<br />
+				a portrait of the young man. While finishing the painting, Basil reluctantly<br />
+				introduces Dorian to his friend Lord Henry Wotton, a man known for scandal <br />
+				and exuberance. Wotton inspires Dorian to live life through the senses, to <br />
+				feel beauty in everyday experience. Dorian becomes enthralled by Wotton’s ideas,<br />
+				and more so becomes obsessed with remaining young and beautiful. He expresses <br />
+				a desire to sell his soul and have the portrait of him age, while he, the man, <br />
+				stays eternally young. A tragic story of hedonism and desire,The Picture of Dorian<br />
+				Gray is Oscar Wilde’s only published novel.
+			</p>
+		</div>
+	</body>
 </html>
