--- a/book2.html
+++ b/book2.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book 2</title>
-</head>
-<body background="./images/volume-resume-graphique-solitude-bureau.jpg">
-    <br><br><br>
-    <nav>
-        <ul type="circle">
-            <li><strong><a href="index.html">Home</a></strong></li>
-            <li><strong><a href="books_list.html">Top Three Favorite Books</a></strong></li>
-        </ul>
-    </nav>
-    <div style="text-align: center;">
-        <h1>Think and Grow Rich</h1>
-        <img src="images/Think_and_grow_rich.jpg" alt="Think and Grow Rich">
-        <br><br>
-        <p style="background-color: bisque;"><strong>Think and Grow Rich</strong> is a book written by Napoleon Hill released in 1937 <br>
-            and promoted as a personal development and self-improvement book. <br>
-            He claimed to be inspired by a suggestion from business magnate and <br>
-            later-philanthropist Andrew Carnegie. However there is no evidence that<br>
-            the two ever met.The book is considered a classic in the personal<br>
-            development genre and has been widely influential in shaping the way<br>
-            people think about success and wealth.</p>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Book 2</title>
+	</head>
+	<body background="./images/volume-resume-graphique-solitude-bureau.jpg">
+		<br />
+		<br />
+		<br />
+		<nav>
+			<ul type="circle">
+				<li>
+					<strong><a href="index.html">Home</a></strong>
+				</li>
+				<li>
+					<strong><a href="books_list.html">Top Three Favorite Books</a></strong>
+				</li>
+			</ul>
+		</nav>
+		<div align="center">
+			<h1>Think and Grow Rich</h1>
+			<img src="images/Think_and_grow_rich.jpg" alt="Think and Grow Rich" />
+			<br />
+			<br />
+			<p>
+				<strong>Think and Grow Rich</strong> is a book written by Napoleon Hill released in 1937 <br />
+				and promoted as a personal development and self-improvement book. <br />
+				He claimed to be inspired by a suggestion from business magnate and <br />
+				later-philanthropist Andrew Carnegie. However there is no evidence that<br />
+				the two ever met.The book is considered a classic in the personal<br />
+				development genre and has been widely influential in shaping the way<br />
+				people think about success and wealth.
+			</p>
+		</div>
+	</body>
 </html>
