--- a/book3.html
+++ b/book3.html
@@ -13,11 +13,12 @@
             <li><strong><a href="books_list.html">Top Three Favorite Books</a></strong></li>
         </ul>
     </nav>  
-    <div style="text-align: center;">
+    <div align="center">
         <h1>The Power Of Positive Thinking</h1>
         <img src="images/thepowerofpositivethinking.jpg" alt="The Power Of Positive Thinking">
         <br><br>
-        <p style="background-color: bisque;"><strong>The Power of Positive Thinking</strong> A Practical Guide to Mastering the Problems <br>
+        <p>
+            <strong>The Power of Positive Thinking</strong> A Practical Guide to Mastering the Problems <br>
            of Everyday Living is a 1952 self-help book by American minister Norman Vincent Peale. <br>
            It provides anecdotal "case histories" of positive thinking using a biblical approach,<br>
            and practical instructions which were designed to help the reader achieve a permanent <br>
